# PawpularityPipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
configs_examples/: train.yaml
pawpularitypipeline/datasets/: __init__.py
pawpularitypipeline/models/: efficientnets.py
pawpularitypipeline/preprocessing/: __init__.py  augmentations_combined.py
tools/: load_dataset.py
